--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
         <h2>Surto:</h2>
         <p>As vezes ela tem seus surtos mas mesmo assim eu gosto muito da MINHA MULHER!! </p>        
     </div>
-    <div class="box boximg">
-        <h2>MINHA GOSTOSA ♥</h2>
-        <img src="lala.jpg" alt="lala">   
-    </div>
+    <h2>MINHA GOSTOSAAAA ♥</h2>
+    <img src="lala.jpg" alt="lala">   
 
     <script src="script.js"></script>
 </body>
